Package: calmate
================

Version: 0.3.1 [2010-06-19]
o Added argument 'truncate=TRUE' to internal fitCalMaTe()
  and rewrote the code to do the truncation in (CA,CB) space.
  The truncation is done such that CA+CB is preserved.


Version: 0.3.0 [2010-06-18]
o CLEAN UP: Rewrote calmateByThetaAB() so it is no longer 
  old using calmate() but a new internal fitCalMaTe().
  The latter should probably we incorporated "inline" in
  calmateByThetaAB() to better make use of vectorization.


Version: 0.2.2 [2010-06-18]
o BUG FIX: Now "truncating" by x[x < eps] <- eps (was x[x == 0] <- eps).
o BUG FIX: A few potential bugs where removed.
o CLEAN UP: Tidied up the code.
o CLEAN UP: Removed obsolete files.


Version: 0.2.1 [2010-05-19]
o Added weightedCalMaTeByThetaAB() and weightedCalMaTeByTotalAndFracB().
  The former replaces weightedCalMaTeByASCN().
o Added internal thetaAB2TotalAndFracB() and totalAndFracB2ThetaAB().
o Decreased the package dependencies.  Now aroma.core is
  only suggested, but not required.


Version: 0.2.0 [2010-05-18]
o Added weightedCalMaTeByASCN() which takes an Jx2xI array
  of allele-specific signals, where J is the number of SNPs,
  2 is the number of alleles, and I is the number of samples.


Version: 0.1.2 [2010-05-18]
o CLEAN UP: Source code cleanup and standardization.
o ROBUSTNESS: Added a redundancy test.


Version: 0.1.1 [2010-05-04]


Version: 0.1.0 [2010-05-04]
o Made into an R package.


Version: 0.0.1 [2010-05-03]
o Created.