@@ -1,4 +1,4 @@
-fitCalMaTe <- function(T, refs, fB1=1/3, fB2=2/3, maxIter=50, truncate=TRUE, ...) {
+fitCalMaTe <- function(T, refs, fB1=1/3, fB2=2/3, maxIter=50, ...) {
   # This is an internal function. Because of this, we will assume that
   # all arguments are valid and correct.  No validation will be done.
   nbrOfSNPs <- nrow(T);
@@ -7,7 +7,7 @@ fitCalMaTe <- function(T, refs, fB1=1/3, fB2=2/3, maxIter=50, truncate=TRUE, ...
 
   # Adding a small value so there are "non" 0 values
   eps <- 1e-6;
-  T[T < 1e-6] <- 1e-6;
+  T[T < eps] <- eps;
   
   a <- max(max(T[2,] / (pmax(T[1,],0) + 1e-4)), max(T[1,] / (pmax(T[2,],0) + 1e-4)));
   Giro <- matrix(c(1, 1/a, 1/a, 1), nrow=2, ncol=2, byrow=FALSE);
@@ -58,33 +58,11 @@ fitCalMaTe <- function(T, refs, fB1=1/3, fB2=2/3, maxIter=50, truncate=TRUE, ...
   # P matrix is:
   #  [1  1] [   ] = [MatSum[1]   MatSum[2]] (We have already applied it) MatSum is 1,1
   #  [1 -1] [ P ]   [MatDiff[1] MatDiff[2]]
-  P <- matrix(c(0.5, 0.5, 0.5, -0.5), nrow=2, ncol=2, byrow=FALSE) %*% matrix(c(c(1,1), matDiff), nrow=2, ncol=2, byrow=TRUE);
+  U <- matrix(c(0.5, 0.5, 0.5, -0.5), nrow=2, ncol=2, byrow=FALSE);
+  V <- matrix(c(c(1,1), matDiff), nrow=2, ncol=2, byrow=TRUE);
+  P <- U %*% V;
   
   res <- P %*% T;
-
-
-  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  # Truncate ASCNs to avoid non-positives?
-  # Truncation is done such that TCN is preserved regardlessly.
-  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  if (truncate) {
-    delta <- matrix(0, nrow=nrow(res), ncol=ncol(res));
-
-    # (CA*,CB*) = (CA,CB) + (-delta,+delta) for all SNPs where CA < 0.
-    idxs <- which(res[1,] < 0);
-    d <- res[1,idxs];
-    delta[1,idxs] <- -d;
-    delta[2,idxs] <- +d;
-
-    # (CA*,CB*) = (CA,CB) + (+delta,-delta) for all SNPs where CB < 0.
-    idxs <- which(res[2,] < 0);
-    d <- res[2,idxs];
-    delta[1,idxs] <- +d;
-    delta[2,idxs] <- -d;
-
-    # Note, here all(colSums(delta) == 0) is TRUE.
-    res <- res + delta;
-  } # if (!allowNegative)
 
 
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
