@@ -1,3 +1,3 @@
 fitCalMaTe
 refineCN
-
+truncateThetaAB truncateThetaAB.array
